--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
       firebase.analytics();
     </script>
     <script src="https://www.gstatic.com/firebasejs/ui/4.5.0/firebase-ui-auth.js"></script>
-    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.5.0/firebase-ui-auth.css" />
+    <link type="text/css" rel="stylesheet" href="firebase-ui-auth.css" />
     <script type="text/javascript">
       var uiConfig = {
         signInSuccessUrl: 'index.html',
