New data format to prevent conflicts, minor menu changes.

--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
     function add(){
       var dbref = db.collection('schedules').doc(this.uid);
       var add = dbref.set({
-          activity: document.getElementById('activity').value,
-          time: document.getElementById('time').value,
+          [document.getElementById('time').value]: document.getElementById('activity').value
       }, { merge: true });
     }
   </script>
@@ -61,7 +60,7 @@
 <body>
   <h1>Next Stop: Homework!</h1>
   <input type="text" id="activity" value="Activity Name">
-  <input type="time" id="time" value="Time">
+  <input type="time" id="time" value="13:00">
   <button type="button" onclick="add();">Add</button>
 </body>
 
