Begin Schedule page, stylesheet changes.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
   <h2>Please fill out your schedule:</h2>
   <input type="text" id="activity" value="Activity Name">
   <input type="time" id="time" value="13:00">
-  <button type="button" onclick="add();">Add</button>
+  <button type="button" id="addbtn" onclick="add();">Add</button>
+  <hr />
+  <h2>Are you ready?</h2>
+  <button type="button" id="gobtn" onclick="window.location.href='schedule.html'">Go to schedule!</button>
 </body>
 
 </html>
